ch7/apigateway-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apigateway
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      annotations:
        sidecar.istio.io/statsInclusionPrefixes: "cluster.outbound|80||catalog.istioinaction.svc.cluster.local"    
      labels:
        app: apigateway
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: istioinaction/apigateway:latest
        imagePullPolicy: IfNotPresent
        name: apigateway
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
